# cpp-os

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_tests.sh  s.sh
.github/workflows/: ci.yml
include/: config.h
mockos/: CMakeLists.txt
mockos/src/: clock.h  context.h  game_loop.h  helpers.h  main.cpp  os.h  sys.h  term.h
mockos/src/apps/: info.h  task_manager.cpp  task_manager.h  text_editor.h  theme_editor.h
mockos/src/interface/: background.h  debug.h  startup.h  taskbar.h  util.h
osmock/: CMakeLists.txt  README.md
osmock/include/osmock/: helpers.h
osmock/src/: main.cpp
prosched/: CMakeLists.txt  README.md  config.txt
prosched/src/: Config.h  Constants.hpp  Context.h  config.h  context.h  main.cpp
prosched/src/Controller/: Controller.h
prosched/src/Scheduler/: Process.cpp  Process.h  Scheduler.h  Worker.h  fcfs.cpp
prosched/src/View/: View.cpp
prosched/src/commands/: Command.cpp  Interpreter.cpp  Interpreter.h  Interpreter.hpp  Statement.cpp  Statement.h  interpreter.hpp
prosched/src/controller/: Controller.cpp  Controller.h
prosched/src/memory/: MemoryManager.h  PagingManager.h
prosched/src/scheduler/: Scheduler.cpp  Scheduler.h
prosched/src/scheduler/commands/: Command.h
prosched/src/scheduler/process/: Process.cpp  Process.h
prosched/src/scheduler/worker/: Worker.cpp  Worker.h
prosched/src/view/: View.cpp  View.h
prosched/src/view/page/: Menu.cpp  Menu.h
prosched/tests/: ConfigTest.cpp  ControllerTest.cpp  InterpreterTest.cpp  MemoryManagerTest.cpp  OldMemoryManagerTest  PagingManagerTest.cpp  ProcessTest.cpp  SchedulerTest.cpp  WorkerTest.cpp
prosched/tests/manual/: test_01_init.txt  test_02_screen_s.txt  test_03_screen_r.txt  test_04_scheduler.txt  test_05_report_util.txt  test_06_high_util.txt  test_07_stop_drain.txt  test_08_screen_s_named.txt  test_09_xyz_increment.txt  test_10_fcfs_order.txt  test_11_delay_per_exec.txt  test_12_partial_util.txt  test_13_rr_fairness.txt
prosched/tests/manual/configs/: config_demo_delay.txt  config_demo_drain.txt  config_demo_fcfs.txt  config_demo_high_util.txt  config_demo_named.txt  config_demo_partial.txt  config_demo_rr_fair.txt  config_demo_xyz.txt  config_fast.txt  config_rr.txt  config_slow.txt
src/: main.cpp
src/Controller/: Controller.cpp  Controller.h
src/View/: View.cpp  View.h
src/View/Page/: Menu.cpp  Menu.h
